--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,59 @@
     transform: rotate(360deg);
   }
 }
+
+textarea{
+  width: 80%;
+  font-size: 16px;
+}
+textarea[disabled]{
+  width: 80%;
+  background: #efefef;
+}
+pre,code{
+  text-align:left;
+}
+
+
+.loader {
+  border: 6px solid #f3f3f3; /* Light grey */
+  border-top: 6px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+.output-container.error{ 
+  border:2px solid red;
+}
+.output-container{
+  background-color: #eee; 
+  position:relative;
+  width: 80%;
+  margin: 0 auto;
+  border:2px solid transparent;
+}
+.output-container button{
+  position: absolute;
+  right: 0;
+  top:0;
+  padding: 10px 15px;
+  min-width: 100px;
+  margin: 0px;
+}
+button[disabled]{
+  opacity: 0.5;
+} 
+button{ 
+  padding: 10px 15px;
+  min-width: 120px;
+  color: black;
+  font-weight: bold;
+  margin: 20px;
+}
