--- a/src/App.css
+++ b/src/App.css
@@ -10,14 +10,34 @@ body,html,head{
 header{
   background-color: #30323D;
   padding: 10px 20px 50px;
-  margin-bottom: 20px;
-  text-align: left; 
+  margin-bottom: 20px; 
   color: #fff;
   position:relative;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
  
 } 
 
-
+.author-info a:hover,.author-info a:active, .author-info a:focus{
+color: #fff;
+text-decoration: none;
+border-bottom: 1px solid #fff;
+}
+.author-info, .author-info a
+{
+  font-size: 12px;
+  color: #fff;
+  margin:0; 
+  transition: all 0.3s;
+}
+.author-info a
+{ 
+  transition: all 0.3s;
+  text-decoration: none;
+  border-bottom: 1px dotted #fff;
+}
 
 svg.wave .a { fill: none; }
 
